--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -10,6 +10,7 @@ services:
     container_name: hiking-app
   redis:
     image: redis:latest
+    container_name: redis
     environment:
       - ALLOW_EMPTY_PASSWORD=yes
     ports:
