--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,27 +1,23 @@
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
-spring.datasource.password=sa
+spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
+
+spring.application.name=hiking-app
+
+logging.level.org.springframework.security=DEBUG
 
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.data-locations=classpath:database/data.sql
 
-logging.level.org.springframework.security=DEBUG
-
 spring.cache.type=redis
-spring.data.redis.host=localhost
+spring.data.redis.host=redis
 spring.data.redis.port=6379
-
-logging.level.org.springframework.cache=DEBUG
-logging.level.org.springframework.data.redis=DEBUG
 
 hike-app.trail-info.base-url=https://nominatim.openstreetmap.org
 
-spring.jpa.show-sql=true
-
-spring.application.name=hiking-app
 spring.messages.basename=classpath:i18n/messages
 
 management.endpoints.web.exposure.include=*
